# whcollect

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/whcollect/: __init__.py  cli.py  downloader.py  exceptions.py  orchestrator.py  requests.py
