[tool.poetry]
name = "whcollect"
version = "0.1.0"
description = "Download wallpapers from your wallhaven collections."
authors = ["trk <dev.trk.9001@gmail.com>"]
license = "MIT"
packages = [
    { include = "whcollect", from = "src" },
]

[tool.poetry.scripts]
whcollect = "whcollect.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^1.2.2"
click = "^8.0.3"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
aiofiles = "^0.8.0"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
